--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -1,16 +1,27 @@
 <div class="container py-16 md:py-20" id="games">
-    <h2
-        class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-        <span class="normal-case">iOS</span> Games</h2>
+    <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+        Game Design</h2>
     <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
         Here are games I created which are available to play in the Apple App Store</h3>
 
-    <div class="w-full sm:w-3/4 lg:w-full mx-auto grid grid-cols-1 lg:grid-cols-1 gap-8 md:gap-10 pt-12">
-        <a 
-            href="https://apps.apple.com/us/app/squarecrusher/id1518515040" 
-            class="mx-auto md:mx-0 transition-all transform hover:scale-105"
-            target="_blank">
-            <%= image_pack_tag "portfolio-apple.jpeg", class: "shadow w-full", alt: "portfolio image" %>
-        </a>
+    <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-1 gap-6 md:gap-10 pt-10 md:pt-12">
+        <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded">
+            <video autoplay loop muted>
+                <source src="<%= asset_pack_path("media/images/C1026-no-audio.mp4") %>" type="video/mp4">
+
+                Sorry, your browser doesn't support embedded videos.
+            </video>
+
+            <div class="text-center">
+                <h3 class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
+                    <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" class="text-primary" target="_blank">
+                        SquareCrusher!
+                    </a>
+                </h3>
+                <p class="text-sm md:text-base text-grey pt-4 px-4">
+                    The best iOS Game of all time.</span>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
