--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -1,4 +1,5 @@
 <div class="container py-16 md:py-20" id="games">
+    <!--
     <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
         Game Design</h2>
     <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
@@ -21,6 +22,80 @@
                 <p class="text-sm md:text-base text-grey pt-4 px-4">
                     The best iOS Game of all time.</span>
                 </p>
+            </div>
+        </div>
+    </div>
+    -->
+
+    <div class="container py-16 md:py-20 flex flex-col lg:flex-row items-center">
+        <div class="w-full sm:w-3/4 lg:w-3/5 text-center lg:text-left">
+            <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase">
+                Game Design</h2>
+
+            <div class="shadow p-2 my-6 group rounded">
+                <video autoplay loop muted playsinline>
+                    <source src="<%= asset_pack_path("media/images/home/squarecrusher-hq.mp4") %>" type="video/mp4">
+
+                    Sorry, your browser doesn't support embedded videos.
+                </video>
+            </div>
+        </div>
+
+        <div class="w-full sm:w-3/4 lg:w-2/5 pl-0 lg:pl-12 pt-10 lg:pt-0">
+            <h3 class="font-semibold text-2xl lg:text-4xl uppercase pt-8 flex justify-center lg:justify-start">
+                <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" class="text-primary" target="_blank">
+                    SquareCrusher!
+                </a>
+            </h3>
+            <div class="my-5">
+                <div class="flex items-center justify-center lg:justify-start">
+                    <i class="bx bxl-apple text-5xl text-primary mr-5"></i>
+                    <h4 class="font-header font-normal text-black uppercase">
+                        <%= "Built With / " %>
+                        <span class="text-primary font-black">
+                            Swift & SpriteKit
+                        </span>
+                    </h4>
+                </div>
+            </div>
+            <div class="my-5">
+                <div class="flex items-center justify-center lg:justify-start">
+                    <i class="bx bx-game text-5xl text-primary mr-5 p0"></i>
+                    <h4 class="font-header font-normal text-black uppercase">
+                        <%= "Fast Paced / " %>
+                        <span class="text-primary font-black">
+                            Action Game
+                        </span>
+                    </h4>
+                </div>
+            </div>
+            <div class="my-5">
+                <div class="flex items-center justify-center lg:justify-start">
+                    <i class="bx bx-volume-full text-5xl text-primary mr-5 p0"></i>
+                    <h4 class="font-header font-normal text-black uppercase">
+                        <%= "Custom / " %>
+                        <span class="text-primary font-black">
+                            Sound Effects
+                        </span>
+                    </h4>
+                </div>
+            </div>
+            <div class="my-5">
+                <div class="flex items-center justify-center lg:justify-start">
+                    <i class="bx bx-dollar-circle text-5xl text-primary mr-5 p0"></i>
+                    <h4 class="font-header font-normal text-black uppercase">
+                        <%= "In Game / " %>
+                        <span class="text-primary font-black">
+                            Economy
+                        </span>
+                    </h4>
+                </div>
+            </div>
+            <div class="my-10 flex justify-center lg:justify-start">
+                <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040"
+                    class="font-body font-black text-sm md:text-xl text-primary hover:text-white hover:bg-yellow border-4 border-primary px-10 py-4 uppercase rounded-full text-center mr-4 mb-4">
+                    Download Now
+                </a>
             </div>
         </div>
     </div>
