--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -1,100 +1,90 @@
 <div class="container py-16 md:py-20" id="games">
-    <!--
-    <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-        Game Design</h2>
-    <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-        Here are games I created which are available to play in the Apple App Store</h3>
+    <div class="w-full text-center lg:text-left">
+        <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase">
+            Game Design</h2>
+    </div>
+    <div class="flex flex-col lg:flex-row items-center">
 
-    <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-1 gap-6 md:gap-10 pt-10 md:pt-12">
-        <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded">
+        <div class="w-full md:w-4/5 lg:w-3/5 shadow p-2 my-6 group rounded">
             <video autoplay loop muted playsinline>
                 <source src="<%= asset_pack_path("media/images/home/squarecrusher-hq.mp4") %>" type="video/mp4">
-
                 Sorry, your browser doesn't support embedded videos.
             </video>
-
-            <div class="text-center">
-                <h3 class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
-                    <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" class="text-primary" target="_blank">
-                        SquareCrusher!
-                    </a>
-                </h3>
-                <p class="text-sm md:text-base text-grey pt-4 px-4">
-                    The best iOS Game of all time.</span>
-                </p>
-            </div>
-        </div>
-    </div>
-    -->
-
-    <div class="container py-16 md:py-20 flex flex-col lg:flex-row items-center">
-        <div class="w-full sm:w-3/4 lg:w-3/5 text-center lg:text-left">
-            <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase">
-                Game Design</h2>
-
-            <div class="shadow p-2 my-6 group rounded">
-                <video autoplay loop muted playsinline>
-                    <source src="<%= asset_pack_path("media/images/home/squarecrusher-hq.mp4") %>" type="video/mp4">
-
-                    Sorry, your browser doesn't support embedded videos.
-                </video>
-            </div>
         </div>
 
-        <div class="w-full sm:w-3/4 lg:w-2/5 pl-0 lg:pl-12 pt-10 lg:pt-0">
-            <h3 class="font-semibold text-2xl lg:text-4xl uppercase pt-8 flex justify-center lg:justify-start">
-                <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" class="text-primary" target="_blank">
+        <div class="w-full md:w-3/4 lg:w-2/5 pl-0 lg:pl-12 pt-10 lg:pt-0">
+            <h3 class="font-semibold text-2xl lg:text-4xl uppercase pt-0 flex justify-center lg:justify-start">
+                <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" class="text-primary"
+                    target="_blank">
                     SquareCrusher!
                 </a>
             </h3>
+
             <div class="my-5">
                 <div class="flex items-center justify-center lg:justify-start">
                     <i class="bx bxl-apple text-5xl text-primary mr-5"></i>
                     <h4 class="font-header font-normal text-black uppercase">
-                        <%= "Built With / " %>
+                        <%= "Built With " %>
                         <span class="text-primary font-black">
                             Swift & SpriteKit
                         </span>
                     </h4>
                 </div>
             </div>
+
             <div class="my-5">
                 <div class="flex items-center justify-center lg:justify-start">
                     <i class="bx bx-game text-5xl text-primary mr-5 p0"></i>
                     <h4 class="font-header font-normal text-black uppercase">
-                        <%= "Fast Paced / " %>
+                        <%= "Fast Paced " %>
                         <span class="text-primary font-black">
                             Action Game
                         </span>
                     </h4>
                 </div>
             </div>
+
             <div class="my-5">
                 <div class="flex items-center justify-center lg:justify-start">
                     <i class="bx bx-volume-full text-5xl text-primary mr-5 p0"></i>
                     <h4 class="font-header font-normal text-black uppercase">
-                        <%= "Custom / " %>
+                        <%= "Custom " %>
                         <span class="text-primary font-black">
                             Sound Effects
                         </span>
                     </h4>
                 </div>
             </div>
+
             <div class="my-5">
                 <div class="flex items-center justify-center lg:justify-start">
                     <i class="bx bx-dollar-circle text-5xl text-primary mr-5 p0"></i>
                     <h4 class="font-header font-normal text-black uppercase">
-                        <%= "In Game / " %>
+                        <%= "In Game " %>
                         <span class="text-primary font-black">
                             Economy
                         </span>
                     </h4>
                 </div>
             </div>
-            <div class="my-10 flex justify-center lg:justify-start">
-                <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040"
-                    class="font-body font-black text-sm md:text-xl text-primary hover:text-white hover:bg-yellow border-4 border-primary px-10 py-4 uppercase rounded-full text-center mr-4 mb-4">
+
+            <div class="my-5">
+                <div class="flex items-center justify-center lg:justify-start">
+                    <i class="bx bxs-star text-5xl text-primary mr-5 p0"></i>
+                    <h4 class="font-header font-normal text-black uppercase">
+                        <%= "5 Star " %>
+                        <span class="text-primary font-black">
+                            Rating
+                        </span>
+                    </h4>
+                </div>
+            </div>
+
+            <div class="flex justify-center lg:justify-start">
+                <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" target="_blank"
+                    class="bg-primary hover:bg-grey-20 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                     Download Now
+                    <i class="bx bxs-cloud-download text-3xl relative -right-2"></i>
                 </a>
             </div>
         </div>
