--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,7 +18,7 @@ html[lang="en"]
     meta name='MobileOptimized' content='320'
 
     - # facebook open graph
-    meta[property="og:title" content="Homepage | benradler.com"]
+    meta[property="og:title" content="Homepage - benradler.com"]
     meta[property="og:locale" content="en_US"]
     meta[property="og:url" content="//"]
     meta[property="og:site_name" content="benradler.com"]
@@ -36,7 +36,7 @@ html[lang="en"]
     link[crossorigin="crossorigin" href="https://fonts.gstatic.com" rel="preconnect"]
     link[as="style" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Raleway:wght@400;500;600;700&display=swap" rel="preload"]
     link[href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet"]
-    link[href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet"]
+    link[href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet"]
     
     - # staging/production require this
     = stylesheet_pack_tag 'application'
