--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -40,10 +40,18 @@
                         class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
                         Magician Ramana</h3>
                     <p class="text-sm md:text-base text-grey pt-4 px-4">
-                        My most-viewed video, at nearly <span class="font-black">16 million views</span>. Featuring famous Dutch Magician Ramana.
+                        My most-viewed video, with nearly <span class="font-black">16 million views,</span> features famous Dutch Magician Ramana
                     </p>
                 </div>
             </div>
+        </div>
+
+        <div class="flex justify-center mt-8">
+            <a href="https://youtube.com/benradler" target="_blank"
+                class="bg-primary hover:bg-grey-20 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                Visit my YouTube Channel
+                <i class="bx bxl-youtube text-3xl relative -right-2"></i>
+            </a>
         </div>
     </div>
 </div>
