--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,12 +10,7 @@ html[lang="en"]
     
     - # content and device information
     meta[charset="utf-8"]
-    meta[content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"]
-    meta[content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"]
-
-    - # TODO: are these 2 tags required/needed? esp. check photography page without them
-    meta[name='HandheldFriendly' content='True']
-    meta[name='MobileOptimized' content='320']
+    meta[name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"]
 
     - # facebook open graph
     meta[property="og:title" content="Homepage - benradler.com"]
