--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -4,7 +4,7 @@
 <div>
     <div class="container py-6 md:py-10">          
       <% @posts.each do |post| %>
-        <div class="max-w-4xl mx-auto mb-20 border-b pb-5 border-lila" role="article"  itemscope='' itemtype='http://schema.org/Article'>
+        <div class="max-w-4xl mx-auto mb-20 border-b pb-5 border-lila" id="post-<%= post.id %>" role="article"  itemscope='' itemtype='http://schema.org/Article'>
           <% # .post-thumbnail = image_tag post.featured_image_url if post.featured_image_url.present? %>
           <%= render partial: 'meta', locals: { post: post } %>
           <div class="pt-8 prose max-w-none" itemprop="articleBody">
