--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -10,7 +10,9 @@
 
         <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
             <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-primary-70">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FHebqAXUJGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="relative pb-[56%] h-0 overflow-hidden">
+                    <iframe class="absolute top-0 left-0 w-full h-full" src="https://www.youtube.com/embed/FHebqAXUJGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 <div class="text-center">
                     <h3
                         class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 uppercase pt-8">
@@ -22,7 +24,9 @@
             </div>
 
             <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-primary-70">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/AMzBQlTWPHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="relative pb-[56%] h-0 overflow-hidden">
+                    <iframe class="absolute top-0 left-0 w-full h-full" src="https://www.youtube.com/embed/AMzBQlTWPHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 <div class="text-center">
                     <h3
                         class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 uppercase pt-8">
@@ -34,7 +38,9 @@
             </div>
 
             <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-primary-70">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Mdk78fR0ihw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="relative pb-[56%] h-0 overflow-hidden">
+                    <iframe class="absolute top-0 left-0 w-full h-full" src="https://www.youtube.com/embed/Mdk78fR0ihw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 <div class="text-center">
                     <h3
                         class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 uppercase pt-8">
