--- a/app/views/shared/_contact_me.html.erb
+++ b/app/views/shared/_contact_me.html.erb
@@ -10,15 +10,15 @@
   <% # this invisible input is required for captcha %>
   <%= f.text_field :nickname, class: 'hidden invisible' %>
 
-  <div class="">
-    <div class="flex flex-col">
-      <div class="flex-auto">
-        <%= f.text_field :name, placeholder: 'name',   class: "w-full md:w-1/2 mr-3 lg:mr-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
+  <div class="flex flex-row gap-x-4">
+    <div class="flex-auto">
+      <div class="flex-1">
+        <%= f.text_field :name, placeholder: 'name',   class: "w-full mr-3 lg:mr-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
       </div>
     </div>
-    <div class="flex flex-col">
-      <div class="flex-auto">
-        <%= f.text_field :email, placeholder: 'email', class: "w-full md:w-1/2 font-body text-black px-4 py-3 border-grey-50 rounded" %>
+    <div class="flex-auto">
+      <div class="flex-1">
+        <%= f.text_field :email, placeholder: 'email', class: "w-full font-body text-black px-4 py-3 border-grey-50 rounded" %>
       </div>
     </div>
   </div>
