--- a/app/views/photography/index.html.slim
+++ b/app/views/photography/index.html.slim
@@ -3,7 +3,7 @@
 
 - content_for :page_title, 'Photography Gallery'
 - content_for :head do
-  = javascript_pack_tag 'photography', 'data-turbo-track': 'reload'
+  = javascript_include_tag 'photography', 'data-turbo-track': 'reload'
   = stylesheet_pack_tag 'photography', 'data-turbo-track': 'reload'
 
 - # thumbnail gallery
