--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-center bg-cover bg-no-repeat relative py-8"
-    style="background-image: url(<%= asset_path("media/images/home/bg-hero.jpg") %>);">
+    style="background-image: url(<%= asset_path("home/bg-hero.jpg") %>);">
 
     <div
         class="bg-center bg-cover bg-no-repeat absolute inset-0 z-20 bg-gradient-to-r from-hero-gradient-from dark:from-hero-gradient-dark-from to-hero-gradient-to dark:to-hero-gradient-dark-to">
