--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -5,7 +5,7 @@
             Videos</h2>
         <h3 class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Watch the Best Short Films From
-            <a href="https://youtube/com/benradler" target="_blank" class="text-primary dark:text-primary-500">My YouTube Channel</a>
+            <a href="https://youtube.com/benradler" target="_blank" class="text-primary dark:text-primary-500">My YouTube Channel</a>
         </h3>
 
         <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
